@@ -14,6 +14,9 @@
   - DBIx::Custom::Model::update_or_insert method is DEPRECATED!
   - DBIx::Custom::Model::count method is DEPRECATED!
   - DBIx::Custom::Model::primary_key attribute is DEPRECATED!
+  - DBIx::Custom::setup method is DEPRECATED!
+    this method has no meaning because
+    columns is automatically set when create_model or include_model is called.
   - DBIx::Custom::insert method which have array argument(For example, [{foo => 1, bar => 2}, {foo => 3, bar => 4}])
     become slow. (Performance down 1)
   - DBIx::Custom::execute method's reuse option become no more meaning. (Performance down 2)
